# minimal

./: .gitignore  Makefile.devel  Makefile.in  README.md  busybox.config  busybox.x86_64.config  configure.ac  fdisk-input.txt  grub.cfg  linux.config  linux.x86_64.config  mirrors.mk.in  syslinux.config  uclibc.config  uclibc.specs.in  uclibc.x86_64.config
.github/workflows/: build.yml
bb-patches/: hush.c.patch  init.c  init.c.patch  match.c.patch
